# dropshot-api-manager

./: AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  Justfile  README.md  clippy.toml  release.toml
.cargo/: config.toml
.config/: nextest.toml
.github/workflows/: ci.yml  release.yml
crates/dropshot-api-manager/: Cargo.toml  README.md
crates/dropshot-api-manager-types/: Cargo.toml  README.md
crates/dropshot-api-manager-types/src/: lib.rs  validation.rs  versions.rs
crates/dropshot-api-manager/src/: apis.rs  compatibility.rs  environment.rs  git.rs  lib.rs  output.rs  resolved.rs  spec_files_blessed.rs  spec_files_generated.rs  spec_files_generic.rs  spec_files_local.rs  test_util.rs  validation.rs
crates/dropshot-api-manager/src/cmd/: check.rs  debug.rs  diff.rs  dispatch.rs  generate.rs  list.rs  mod.rs
crates/dropshot-api-manager/src/vcs/: git.rs  imp.rs  jj.rs  mod.rs
crates/integration-tests/: Cargo.toml
crates/integration-tests/src/: environment.rs  fixtures.rs  lib.rs
crates/integration-tests/src/common/: fixtures.rs  mod.rs
crates/integration-tests/tests/integration/: generated_from_dir.rs  git_ref.rs  git_stub.rs  lockstep.rs  main.rs  versioned.rs
crates/integration-tests/tests/integration-tests/: lockstep.rs
e2e-example/: README.md
e2e-example/apis/: Cargo.toml  README.md
e2e-example/apis/src/: lib.rs
e2e-example/client/: Cargo.toml  build.rs
e2e-example/client/src/: lib.rs
e2e-example/documents/versioned/: versioned-3.0.0-b48dc9.json  versioned-4.0.0-92a798.json  versioned-5.0.0-2cf7ac.json  versioned-latest.json
e2e-example/documents/versioned-git-ref/: versioned-git-ref-1.0.0-3a2012.json  versioned-git-ref-1.0.0-3a2012.json.gitref  versioned-git-ref-2.0.0-ede2f1.json  versioned-git-ref-2.0.0-ede2f1.json.gitref  versioned-git-ref-3.0.0-7b66ee.json  versioned-git-ref-3.0.0-7b66ee.json.gitref  versioned-git-ref-4.0.0-4401fd.json  versioned-git-ref-4.0.0-4401fd.json.gitref  versioned-git-ref-5.0.0-80acad.json  versioned-git-ref-latest.json
e2e-example/documents/versioned-git-stub/: versioned-git-stub-1.0.0-50a3d4.json  versioned-git-stub-1.0.0-50a3d4.json.gitstub  versioned-git-stub-2.0.0-e2b025.json  versioned-git-stub-2.0.0-e2b025.json.gitstub  versioned-git-stub-3.0.0-c8ab09.json  versioned-git-stub-3.0.0-c8ab09.json.gitstub  versioned-git-stub-4.0.0-166060.json  versioned-git-stub-4.0.0-166060.json.gitstub  versioned-git-stub-latest.json
guides/: migrating-to-versions-crate.md  new-version.md
