[workspace]
members = [
    "crates/*",
    "e2e-example/apis",
    "e2e-example/bin",
]
resolver = "3"

[workspace.package]
license = "Apache-2.0"
repository = "https://github.com/oxidecomputer/dropshot-api-manager"
edition = "2024"
rust-version = "1.85"

[workspace.lints]

[workspace.dependencies]
anyhow = "1.0.99"
assert_matches = "1.5.0"
atomicwrites = "0.4.4"
camino = "1.2.1"
camino-tempfile = "1.4.1"
camino-tempfile-ext = "0.3.3"
chrono = { version = "0.4.38", features = ["serde"] }
clap = "4.5"
debug-ignore = "1.0.5"
drift = "0.1.1"
dropshot = "0.16.4"
dropshot-api-manager = { path = "crates/dropshot-api-manager", version = "0.2.4" }
dropshot-api-manager-types = { path = "crates/dropshot-api-manager-types", version = "0.2.4" }
e2e-example-apis = { path = "e2e-example/apis" }
fs-err = "3.1.1"
hex = "0.4.3"
indent_write = "2.2.0"
newtype_derive = "0.1.6"
openapi-lint = { git = "https://github.com/oxidecomputer/openapi-lint", branch = "main" }
openapiv3 = "2.2.0"
owo-colors = "4.2.3"
paste = "1.0.15"
schemars = "0.8.22"
semver = "1.0.27"
serde = "1.0.224"
serde_json = "1.0.145"
sha2 = "0.10.9"
similar = "2.7.0"
supports-color = "3.0.2"
textwrap = "0.16.2"
thiserror = "2.0"
