[package]
name = "dropshot-api-manager-types"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
readme = "README.md"
documentation = "https://docs.rs/dropshot-api-manager-types"

[dependencies]
anyhow.workspace = true
camino.workspace = true
paste.workspace = true
serde_json.workspace = true
semver.workspace = true

[lints]
workspace = true
