[package]
name = "integration-tests"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
anyhow.workspace = true
camino.workspace = true
camino-tempfile.workspace = true
camino-tempfile-ext.workspace = true
chrono.workspace = true
clap.workspace = true
dropshot.workspace = true
dropshot-api-manager.workspace = true
dropshot-api-manager-types.workspace = true
openapiv3.workspace = true
schemars = { workspace = true, features = ["chrono"] }
semver.workspace = true
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
assert_matches.workspace = true
