[package]
name = "e2e-example-apis"
version = "0.1.0"
edition.workspace = true
license = "0BSD"
repository.workspace = true
rust-version.workspace = true

[dependencies]
dropshot.workspace = true
dropshot-api-manager-types.workspace = true
schemars.workspace = true
# TODO: remove once upstream dropshot doesn't require a dependency on semver
# in the api crate
semver.workspace = true
serde.workspace = true

[lints]
workspace = true
