[package]
name = "e2e-example-client"
version = "0.1.0"
edition.workspace = true
license = "0BSD"
repository.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
progenitor.workspace = true
reqwest.workspace = true
serde.workspace = true

[build-dependencies]
git-stub-vcs.workspace = true

[lints]
workspace = true

[package.metadata.release]
release = false
